Fix font sizes so that links and things aren't crazy huge

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 * {
     font-family: "Crimson Text";
     text-align: justify;
-    font-size: 1.1em;
 }
 
 h1, h2 {
@@ -19,10 +18,14 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 4em;
     color: white;
  }
-h2 { font-size: 1.2em; }
+h2 { font-size: 1.6em; }
+
+p, li {
+    font-size: 1.5em;
+}
 
 body {
     margin: 0;
@@ -44,13 +47,16 @@ body {
 }
 
 #content {
-    width: 35em;
+    width: 46em;
     margin-left: auto;
     margin-right: auto;
 }
 
 p {
     padding-left: 1.5em;
+}
+
+a, li, p {
     hyphens: auto;
     -moz-hyphens: auto;
 }
